--- a/arch/arm64/boot/dts/mediatek/oplus6893_20817.dts
+++ b/arch/arm64/boot/dts/mediatek/oplus6893_20817.dts
@@ -24,7 +24,7 @@
 
 #include "mediatek/oplus6893/20817/common/20817_common.dtsi"
 
-#include <oplus6893_20817/cust.dtsi>
+#include "mediatek/oplus6893_20817/cust.dtsi"
 
 /* #ifdef OPLUS_ARCH_EXTENDS */
 #include "mediatek/oplus6893/common/oplus6893_20817_audio_extend.dtsi"
