--- a/arch/arm64/configs/cupida_defconfig
+++ b/arch/arm64/configs/cupida_defconfig
@@ -1,4 +1,5 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
+CONFIG_LOCALVERSION="-N.E.O.L.I.T.-cupida"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_IKHEADERS=m
