arch:arm64:configs: Force Load & Unload Modules

--- a/arch/arm64/configs/cupida_defconfig
+++ b/arch/arm64/configs/cupida_defconfig
@@ -29,6 +29,11 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_MTK_ROUND_CORNER_SUPPORT=y
 CONFIG_PREEMPT=y
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
 # CONFIG_BOUNCE is not set
 CONFIG_ZSMALLOC=y
 CONFIG_RANDOMIZE_BASE=y
