--- a/drivers/soc/oplus/system/oplus_saupwk/Kconfig
+++ b/drivers/soc/oplus/system/oplus_saupwk/Kconfig
@@ -2,7 +2,7 @@
 # Copyright (C) 2018-2020 Oplus. All rights reserved.
 #change 'y' to 'n', if you want fo close saupwk feature
 config OPLUS_FEATURE_SAUPWK
-    tristate "oplus saupwk project"
+    tristate "oppo saupwk project"
     default n
     help
-      define this config to init oplus saupwk.
+      define this config to init oppo saupwk.
