--- a/arch/arm64/configs/cupida_defconfig
+++ b/arch/arm64/configs/cupida_defconfig
@@ -685,6 +685,7 @@ CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_ALL=y
 CONFIG_MODULE_SIG_SHA512=y
+CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 
