--- a/drivers/misc/mediatek/sensors-1.0/Kconfig
+++ b/drivers/misc/mediatek/sensors-1.0/Kconfig
@@ -23,3 +23,4 @@ source "drivers/misc/mediatek/sensors-1.0/oplus_virtual_sensor/sensors/fp_displa
 source "drivers/misc/mediatek/sensors-1.0/oplus_virtual_sensor/sensors/lux_aodhub/Kconfig"
 source "drivers/misc/mediatek/sensors-1.0/oplus_virtual_sensor/sensors/pedo_minutehub/Kconfig"
 source "drivers/misc/mediatek/sensors-1.0/oplus_virtual_sensor/sensors/oplus_activity_recognitionhub/Kconfig"
+source "drivers/misc/mediatek/sensors-1.0/oplus_sensor_devinfo/Kconfig"
