arm64: boot: dts: Adapt cust.dtsi
Signed-off-by: EndCredits <alicization.han@gmail.com>

--- a/arch/arm64/boot/dts/mediatek/oplus6893.dts
+++ b/arch/arm64/boot/dts/mediatek/oplus6893.dts
@@ -584,5 +584,5 @@
 
 #include "mediatek/cust_mt6893_touch_1080x2300.dtsi"
 #include "mediatek/cust_mt6885_camera.dtsi"
-#include <oplus6893/cust.dtsi>
+#include "oplus6893/cust.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
