--- a/arch/arm64/boot/dts/mediatek/oplus6893_20615.dts
+++ b/arch/arm64/boot/dts/mediatek/oplus6893_20615.dts
@@ -25,7 +25,7 @@
 #include "mediatek/oplus6893/20615/common/20615_common.dtsi"
 #include "mediatek/oplus6893/20615/pcbv1/20615_cust.dtsi"
 
-#include <oplus6893/cust.dtsi>
+#include "oplus6893/cust.dtsi"
 
 /* #ifdef OPLUS_ARCH_EXTENDS */
 #include "mediatek/oplus6893/common/oplus6893_20615_audio_extend.dtsi"
