oplus6893: Build modules inline
Signed-off-by: EndCredits <alicization.han@gmail.com>

--- a/arch/arm64/configs/oplus6893_defconfig
+++ b/arch/arm64/configs/oplus6893_defconfig
@@ -1,7 +1,7 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
-CONFIG_IKHEADERS=m
+CONFIG_IKHEADERS=y
 #ifndef FEATURE_BUG_STABILITY
 #modify dmesg log size to 2MB
 #CONFIG_LOG_BUF_SHIFT=19
