--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -41,7 +41,7 @@ endif
 
 
     # Do build-in for Makefile checking
-    # export CONFIG_WLAN_DRV_BUILD_IN=y
+    export CONFIG_WLAN_DRV_BUILD_IN=y
 
     ifeq ($(CONFIG_WLAN_DRV_BUILD_IN),y)
         $(info $$CONFIG_MTK_COMBO_CHIP is [${CONFIG_MTK_COMBO_CHIP}])
@@ -50,44 +50,17 @@ endif
 
         ifneq (,$(filter $(CONFIG_MTK_COMBO_CHIP), "CONSYS_6885" "CONSYS_6893"))
             export MTK_COMBO_CHIP=CONNAC2X2_SOC3_0
-            PATH_TO_WMT_DRV      = drivers/misc/mediatek/connectivity/conninfra
+            PATH_TO_WMT_DRV      = conninfra
         else ifneq (,$(filter $(CONFIG_MTK_COMBO_CHIP), "CONSYS_6779" "CONSYS_6873" "CONSYS_6853"))
             export MTK_COMBO_CHIP=CONNAC2X2
-            PATH_TO_WMT_DRV      = drivers/misc/mediatek/connectivity/common
+            PATH_TO_WMT_DRV      = common
         else
             export MTK_COMBO_CHIP=CONNAC
-            PATH_TO_WMT_DRV      = drivers/misc/mediatek/connectivity/common
+            PATH_TO_WMT_DRV      = common
         endif
 
-        PATH_TO_WLAN_CHR_DRV = drivers/misc/mediatek/connectivity/wlan/adaptor
-        PATH_TO_WLAN_DRV     = drivers/misc/mediatek/connectivity/wlan/core/gen4m
-
-        ABS_PATH_TO_WMT_DRV      = $(srctree)/../$(PATH_TO_WMT_DRV)
-        ABS_PATH_TO_WLAN_CHR_DRV = $(srctree)/../$(PATH_TO_WLAN_CHR_DRV)
-        ABS_PATH_TO_WLAN_DRV     = $(srctree)/../$(PATH_TO_WLAN_DRV)
-
-        # check wlan driver folder
-        ifeq (,$(wildcard $(ABS_PATH_TO_WMT_DRV)))
-            $(error $(ABS_PATH_TO_WMT_DRV) is not existed)
-        endif
-        ifeq (,$(wildcard $(ABS_PATH_TO_WLAN_CHR_DRV)))
-            $(error $(ABS_PATH_TO_WLAN_CHR_DRV) is not existed)
-        endif
-        ifeq (,$(wildcard $(ABS_PATH_TO_WLAN_DRV)))
-            $(error $(ABS_PATH_TO_WLAN_DRV) is not existed)
-        endif
-
-        $(warning symbolic link to $(PATH_TO_WMT_DRV))
-        $(warning symbolic link to $(PATH_TO_WLAN_CHR_DRV))
-        $(warning symbolic link to $(PATH_TO_WLAN_DRV))
-
-        $(shell unlink $(srctree)/$(src)/wmt_drv)
-        $(shell unlink $(srctree)/$(src)/wmt_chrdev_wifi)
-        $(shell unlink $(srctree)/$(src)/wlan_drv_gen4m)
-
-        $(shell ln -s $(ABS_PATH_TO_WMT_DRV)      $(srctree)/$(src)/wmt_drv)
-        $(shell ln -s $(ABS_PATH_TO_WLAN_CHR_DRV) $(srctree)/$(src)/wmt_chrdev_wifi)
-        $(shell ln -s $(ABS_PATH_TO_WLAN_DRV)     $(srctree)/$(src)/wlan_drv_gen4m)
+        PATH_TO_WLAN_CHR_DRV = wlan/adaptor
+        PATH_TO_WLAN_DRV     = wlan/core/gen4m
 
         # for gen4m options
         export CONFIG_MTK_COMBO_WIFI_HIF=axi
@@ -113,29 +86,26 @@ endif
         # Do build-in for xxx.c checking
         subdir-ccflags-y += -D MTK_WCN_REMOVE_KERNEL_MODULE
         subdir-ccflags-y += -D MTK_WCN_BUILT_IN_DRIVER
-        obj-y += wmt_drv/
-        obj-y += wmt_chrdev_wifi/
-        obj-y += wlan_drv_gen4m/
+        obj-y += $(PATH_TO_WMT_DRV)/
+        obj-y += $(PATH_TO_WLAN_CHR_DRV)/
+        obj-y += $(PATH_TO_WLAN_DRV)/
 
         # For BT built-in mode start @{
         ifneq (,$(filter $(CONFIG_MTK_COMBO_CHIP), "CONSYS_6885"))
-            PATH_TO_BT_DRV       = drivers/misc/mediatek/connectivity/bt/mt66xx/connac2
+            PATH_TO_BT_DRV       = bt/mt66xx/connac2
             export _MTK_BT_CHIP=MTK_CONSYS_MT6885
         else ifneq (,$(filter $(CONFIG_MTK_COMBO_CHIP), "CONSYS_6893"))
-            PATH_TO_BT_DRV       = drivers/misc/mediatek/connectivity/bt/mt66xx/connac2
+            PATH_TO_BT_DRV       = bt/mt66xx/connac2
             export _MTK_BT_CHIP=MTK_CONSYS_MT6893
         else
-            PATH_TO_BT_DRV       = drivers/misc/mediatek/connectivity/bt/mt66xx/legacy
+            PATH_TO_BT_DRV       = bt/mt66xx/legacy
         endif
-        ABS_PATH_TO_BT_DRV       = $(srctree)/../$(PATH_TO_BT_DRV)
-        $(shell unlink $(srctree)/$(src)/bt)
-        $(shell ln -s $(ABS_PATH_TO_BT_DRV)      $(srctree)/$(src)/bt)
-        obj-y += bt/
+        obj-y += $(PATH_TO_BT_DRV)/
         # @} For BT built-in mode end
 
 
         # For FM built-in mode start @{
-        for fmradio options
+        # for fmradio options
         ifneq (,$(filter $(CONFIG_MTK_COMBO_CHIP), "CONSYS_6885" "CONSYS_6893"))
             export CFG_BUILD_CONNAC2=true
         else
@@ -149,24 +119,14 @@ endif
             FM_CHIP := mt6635
         endif
         export CFG_FM_CHIP_ID=$(MTK_PLATFORM_ID)
-         export CFG_FM_CHIP=$(FM_CHIP)
-        PATH_TO_FMRADIO_DRV       = drivers/misc/mediatek/connectivity/fmradio
-        ABS_PATH_TO_FMRADIO_DRV  = $(srctree)/../$(PATH_TO_FMRADIO_DRV)
-        $(shell unlink $(srctree)/$(src)/fmradio)
-        $(shell ln -s $(ABS_PATH_TO_FMRADIO_DRV)      $(srctree)/$(src)/fmradio)
-        obj-y += fmradio/
+        export CFG_FM_CHIP=$(FM_CHIP)
+        PATH_TO_FMRADIO_DRV       = fmradio
+        obj-y += $(PATH_TO_FMRADIO_DRV)/
         # @} For FM built-in mode end
 
         # For GPS built-in mode start @{
-        PATH_TO_GPS_DRV      = drivers/misc/mediatek/connectivity/gps
-        ABS_PATH_TO_GPS_DRV      = $(srctree)/../$(PATH_TO_GPS_DRV)
-        ifeq (,$(wildcard $(ABS_PATH_TO_GPS_DRV)))
-            $(error $(ABS_PATH_TO_GPS_DRV) is not existed)
-        endif
-        $(warning symbolic link to $(PATH_TO_GPS_DRV))
-        $(shell unlink $(srctree)/$(src)/gps_drv)
-        $(shell ln -s $(ABS_PATH_TO_GPS_DRV)      $(srctree)/$(src)/gps_drv)
-        obj-y += gps_drv/
+        PATH_TO_GPS_DRV      = gps
+        obj-y += $(PATH_TO_GPS_DRV)/
         # @} For GPS built-in mode end
 
     endif
