misc: mediatek: connectivity: Define generated auto configuration
* Also corrected modules path

Signed-off-by: EndCredits <alicization.han@gmail.com>

--- a/drivers/misc/mediatek/connectivity/bt/mt66xx/legacy/Makefile
+++ b/drivers/misc/mediatek/connectivity/bt/mt66xx/legacy/Makefile
@@ -6,7 +6,7 @@ MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
 # Necessary Check
 
 ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
+    export AUTOCONF_H=$(KERNEL_OUT)include/generated/autoconf.h
 endif
 
 ifndef TOP
@@ -41,7 +41,7 @@ endif
 ###############################################################################
 # To include BT driver dependent header file
 
-WMT_SRC_FOLDER := $(TOP)/vendor/mediatek/kernel_modules/connectivity/common
+WMT_SRC_FOLDER := $(srctree)/drivers/misc/mediatek/connectivity/common
 ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/include
 ccflags-y += -I$(WMT_SRC_FOLDER)/common_main/linux/include
 ifneq ($(CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH),)
