--- a/drivers/misc/mediatek/connectivity/bt/mt76xx/sdio/Makefile
+++ b/drivers/misc/mediatek/connectivity/bt/mt76xx/sdio/Makefile
@@ -5,7 +5,7 @@
 # Necessary Check
 
 ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
+    export AUTOCONF_H=$(KERNEL_OUT)include/generated/autoconf.h
 endif
 
 ccflags-y += -imacros $(AUTOCONF_H)
