--- a/drivers/misc/mediatek/connectivity/wlan/core/gen3/Makefile
+++ b/drivers/misc/mediatek/connectivity/wlan/core/gen3/Makefile
@@ -3,7 +3,7 @@ MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
 # Necessary Check
 
 ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
+    export AUTOCONF_H=$(KERNEL_OUT)include/generated/autoconf.h
 endif
 
 ccflags-y += -imacros $(AUTOCONF_H)
